# isotty

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  README  autogen.sh  config.h.in  configure.in  ttyconv.info  ttyconv.lsm.in  ttyconv.spec.in
CVS/: Entries
debian/: .cvsignore  control  copyright  manpages  rules
debian/CVS/: Entries  Repository
pkg/debian/: changelog
src/: .cvsignore  Makefile.am  cmdline.c  cmdline.h  isotty.1  isotty.c  isotty.h  isotty.sh  ttyconv.c  ttyconv.h
src/CVS/: Entries  Repository
ttyconv/CVS/: Repository  Root
