# $Id: Makefile.am,v 1.2 2004/09/07 23:12:57 alexios Exp $
#
# $Log: Makefile.am,v $
# Revision 1.2  2004/09/07 23:12:57  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.1.1.1  2003/08/29 12:33:18  alexios
# Initial revision.
#

CFLAGS=-Wall -g -D_GNU_SOURCE
bin_PROGRAMS=isotty
ttyconv_SOURCES=isotty.c isotty.h cmdline.c cmdline.h

#  install the man pages
man_MANS=isotty.1
